first fatorando a pagina de dashboard e fazendo a pagina menu

--- a/dashboard.html
+++ b/dashboard.html
@@ -68,7 +68,7 @@
 
             <section id="menu">
                 <h2>Gerenciar Cardápio</h2>
-                <button class="add-item">Adicionar Item</button>
+                <button onclick="window.location.href='menu.html'" class="nav-button">Gerenciar Cardápio</button>
                 <!-- Lista de itens do cardápio -->
                 <div class="menu-items">
                     <div class="menu-item">
