--- a/orders.html
+++ b/orders.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="orders-container">
-        <h2>Sistema de Pedidos</h2>
-
-        <!-- Link para voltar ao Dashboard -->
-        <button onclick="window.location.href='dashboard.html'" class="nav-button">Voltar ao Dashboard</button>
+        <h2>Sistema de Pedidos</h2> 
 
         <div id="ordersList">
             <!-- A lista de pedidos será gerada aqui dinamicamente -->
         </div>
+
+        <!-- Botão para ir ao Dashboard -->
+        <button onclick="window.location.href='dashboard.html'" class="nav-button">Ir para o Dashboard</button>
     </div>
 
     <script src="orders.js"></script>
