--- a/dashboard.html
+++ b/dashboard.html
@@ -43,27 +43,13 @@
 
             <section id="orders">
                 <h2>Pedidos Recentes</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID do Pedido</th>
-                            <th>Cliente</th>
-                            <th>Status</th>
-                            <th>Total</th>
-                            <th>Ação</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td><button class="update-status">Atualizar Status</button></td>
-                        </tr>
-                        <!-- Mais pedidos -->
-                    </tbody>
-                </table>
+                <button onclick="window.location.href='menu.html'" class="nav-button">Voltar ao Menu</button>
+                
+                <section class="dashboard">
+                    <div id="dashboardSummary">
+                        <!-- Resumo dos pedidos renderizado pelo JavaScript -->
+                    </div>
+                </section>
             </section>
 
             <section id="menu">
