--- a/orders.html
+++ b/orders.html
@@ -18,10 +18,8 @@
     </header>
 
     <section class="orders">
-        <div id="ordersList">
-            <!-- Lista de pedidos renderizada pelo JavaScript -->
-        </div>
-        <button class="nav-button" onclick="submitOrder()">Confirmar Pedido</button>
+        <div id="order-list"></div>
+        <button class="submit-button" onclick="finalizeOrder()">Finalizar Pedido</button>
     </section>
 
     <script src="orders.js"></script>
