first funcionalidades no ordens

--- a/orders.html
+++ b/orders.html
@@ -12,14 +12,15 @@
         <div  class="header-right">
             <button onclick="window.location.href='menu.html'" class="nav-button">Voltar ao Menu</button>
             <button onclick="window.location.href='dashboard.html'" class="nav-button">Voltar  ao Dashboard</button>
-        </div>
-       
-
+        </div>     
     </header>
 
     <section class="orders">
         <div id="order-list"></div>
         <button class="submit-button" onclick="finalizeOrder()">Finalizar Pedido</button>
+    </section>
+    <section id="notification-area" style="display: none; position: fixed; bottom: 20px; right: 20px; background-color: #10b981; color: white; padding: 1rem; border-radius: 5px;">
+        <p id="notification-message"></p>
     </section>
 
     <script src="orders.js"></script>
