first funcionalidades no dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -50,6 +50,22 @@
                     <div id="order-summary"></div>
                 </section>
             </section>
+
+            <section class="order-status">
+                <h3>Pedidos em Andamento</h3>
+                <div class="order-list">
+                    <!-- Para cada pedido -->
+                    <div class="order-card">
+                        <h4>Pedido #001</h4>
+                        <p><strong>Cliente:</strong> João Silva</p>
+                        <p><strong>Status:</strong> A Caminho</p>
+                        <p><strong>Estimativa de Entrega:</strong> 20 min</p>
+                        <button class="track-btn">Rastrear Entregador</button>
+                        <!-- Mapa em tempo real -->
+                        <div id="map-container"></div>
+                    </div>
+                </div>
+            </section>
            
             
             <section id="reports">
